Task任务的CRUD操作开发完成！

--- a/config/local/config.ini
+++ b/config/local/config.ini
@@ -6,9 +6,9 @@ HttpPort = :8000
 
 ; 数据库配置信息
 [redis]
-RedisAddr = 127.0.0.1
-RedisPw =
-RedisDbName = 2
+RedisAddr = 127.0.0.1:6379
+RedisPw = root
+RedisDbName = 0
 
 [mysql]
 Db = mysql
